# cs283

./: hw2.c
Lab4/: README.md  ServerOutput  s.html
cs281/w1a/: problems
cs283Work/Lab4/: Makefile  client.c  output  server.c
cs283Work/hw1/: h1  p3  p3.c
cs283Work/hw2/: bar.txt  hw2.c  hw2.txt  p2  p2.c  p3  p3.c
cs283Work/hw3/: csapp.c  static.html  tiny.c  tt
cs283Work/hw4/: m  main  main.c
cs283Work/hw4/sub/: test.txt  test2.txt
cs283Work/hw5/: hello-hw.c  p1.c
cs283Work/hw7/: hw7
cs283Work/lab2/: l2.tar.xz
cs283Work/lab2/l2/Makefiles/: makefile-4.txt
cs283Work/lab2/l2/valgrind/: v05.c
cs283Work/lab2/make/: makefile-2.txt  makefile-3.txt  test
cs283Work/lab2/valgrind/: v0  v5
cs283Work/project/: CMakeLists.txt  linuxref.c  ms  tsh-ck.c
hw1/: hw1.c  hw1.h  p2.c  p2.h  p3.c  test.txt
hw2/: baz.txt  foo.txt  h2  hw2.c  p2.c
hw3/: output
hw3/tt.dSYM/Contents/Resources/DWARF/: tt
hw4/: Makefile  README.md  csapp.c
hw4/sub/: not
hw5/: dotpr-hw.c  hello-hw.c  p2.c  p2answers.txt
lab2/gdb/: e  g1  g1.c  g2  g2.c
lab2/l2/Makefiles/: makefile-1.txt  makefile-5.txt
lab2/l2/gdb/: gdbtxt.txt
lab2/l2/valgrind/: valgrind.txt
lab2/make/: makefile-2.txt
lab2/valgrind/: v06.c  v6
project/: tsh-ck.c
project/Github/: o.h
shell-handout/: tsh-ck.c
